--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Vitold Radkevich</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -18,9 +18,10 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top"><i class="fas fa-chalkboard-teacher"></i></a><button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
+<a class="navbar-brand js-scroll-trigger" href="#page-top"><i class="fas fa-chalkboard-teacher"></i></a>
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Portfolio</a></li>
@@ -31,11 +32,12 @@
                 </div>
             </div>
         </nav>
+
         <!-- Masthead-->
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="img/avatar.png" alt="" /><!-- Masthead Heading-->
-                <h1 class="masthead-heading text-uppercase mb-0">Vitold Radkevich</h1>
+                <h1 class=" text-uppercase mb-0">Vitold Radkevich</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -165,15 +167,15 @@
         </section>
 
         <!-- Certification Section-->
-        <section class="page-section portfolio" id="certification">
+        <section class="page-section portfolio bg-primary" id="certification">
             <div class="container">
                 <!-- Certification Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Certifications</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-white mb-0">Certifications</h2>
                 <!-- Icon Divider-->
-                <div class="divider-custom">
+                <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon">
-                       <i class="fas fa-project-diagram"></i>
+                       <i class="fas fa-project-diagram text-white"></i>
                     </div>
                     <div class="divider-custom-line"></div>
                 </div>
@@ -274,14 +276,14 @@
         </section>
 
         <!-- About Section-->
-        <section class="page-section bg-primary text-white mb-0" id="about">
+        <section class="page-section text-secondary mb-0" id="about">
     <div class="container">
 
       <!-- About Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-white">About me</h2>
+      <h2 class="page-section-heading text-center text-uppercase text-secondary">About me</h2>
 
       <!-- Icon Divider -->
-      <div class="divider-custom divider-light">
+      <div class="divider-custom">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
          <i class="fas fa-id-card"></i>
@@ -290,7 +292,7 @@
       </div>
 
       <!-- About Section Content -->
-      <div class="row">
+      <div class="row text">
         <div class="col-lg-4 ml-auto">
           <p class="lead">I am a purposeful person. I quickly find a common language with people, pleasant in communication. Quickly trained and polite in communication. 40 minutes a day I devote to improving English skills. Action plan for the day, week, month. I like self-study: I independently studied Spring, Hibernate. Constantly improving my theoretical knowledge in practice.</p>
         </div>
@@ -303,7 +305,7 @@
 
       <!-- About Section Button -->
       <div class="text-center mt-4">
-        <a class="btn btn-xl btn-outline-light" href="https://github.com/Vitold-sys">
+        <a class="btn btn-xl btn-outline-info" href="https://github.com/Vitold-sys">
           <i class="fab fa-github mr-2"></i>
           Here you can view my code
         </a>
@@ -312,55 +314,42 @@
     </div>
   </section>
         <!-- Contact Section -->
-  <section class="page-section" id="contact">
+  <section class="page-section bg-primary" id="contact">
     <div class="container">
 
       <!-- Contact Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
+      <h2 class="page-section-heading text-center text-uppercase text-white mb-0">Contact Me</h2>
 
       <!-- Icon Divider -->
-      <div class="divider-custom">
+      <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-door-open"></i>
+          <i class="fas fa-door-open text-white"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
 
       <!-- Contact Section Form -->
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-          <form name="sentMessage" id="contactForm" novalidate="novalidate">
-            <div class="btn-group" data-toggle="collapse">
-               <div class="text-center mt-4">
-        <a class="btn btn-outline-info" href="https://www.linkedin.com/in/vitold-radkevich/">
-          <i class="fab fa-linkedin"></i>
-          Linkedin
-        </a>
-      </div>
-      <div class="text-center mt-4">
-        <a class="btn btn-outline-info" href="mailto:radkevich_vitold@mail.ru">
-          <i class="fab fa-google"></i>
-          Mail
-        </a>
-      </div>
-       <div class="text-center mt-4">
-        <a class="btn btn-outline-info" href="CV/CV-Radkevich-EN.doc">
-           <i class="far fa-file-word"></i>
-          Check CV
-        </a>
-      </div>
-      <div class="text-center mt-4">
-        <a class="btn btn-outline-info" href="tel:+375295501501">
-           <i class="fas fa-mobile-alt"></i>
-          Call me
-        </a>
-      </div>                
-            </div>
-          </form>
-        </div>
-      </div>
+                <div class="row">
+                    <div class="col-lg-3 ml-auto mt-2 text-center">
+                        <a class="btn btn-outline-info btn-xl" href="https://www.linkedin.com/in/vitold-radkevich/">
+          <i class="fab fa-linkedin"></i> Linkedin</a>
+                    </div>
+                    <div class="col-lg-3 mr-auto mt-2 text-center">
+                      <a class="btn btn-outline-info btn-xl" href="mailto:radkevich_vitold@mail.ru">
+          <i class="fab fa-google"></i> Mail</a>
+                    </div>
+
+                    <div class="col-lg-2 mr-auto mt-2 text-center">
+                        <a class="btn btn-outline-info btn-xl" href="CV/CV-Radkevich-EN.doc">
+           <i class="far fa-file-word"></i> My CV</a>
+                    </div>
+                   
+                    <div class="col-lg-2 mr-auto mt-2 mb-2 text-center">
+                         <a class="btn btn-outline-info btn-xl" href="tel:+375295501501">
+           <i class="fas fa-mobile-alt"></i> Call me</a>
+                    </div>
+                </div>
     </div>
   </section>
 
