--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         <!-- Footer Location -->
           <h4 class="text-uppercase mb-4">Location</h4>
           <div class="lead mb-0">
-          <i class="fas fa-map-marker-alt"></i>
+          <i class="fas fa-map-marker-alt text-danger"></i>
            Belarus, Minsk   
           </div>
   </footer>
