--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container">
-<a class="navbar-brand js-scroll-trigger" href="#page-top"><div class="nas" id="treeJS"></div><!-- <i class="fas fa-angle-double-up"></i> --></a>
+<a class="navbar-brand js-scroll-trigger" href="#page-top"><div class="nas" id="treeJS"></div><!-- <i class="3dOn fas fa-angle-double-up"></i> --></a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
@@ -63,8 +63,9 @@ renderer.setSize( 50, 50 );
 
 document.getElementById('treeJS').appendChild(renderer.domElement);
 
-const geometry = new THREE.SphereGeometry( 15, 48, 48 );
+//const geometry = new THREE.SphereGeometry( 15, 48, 48 );
 
+const geometry = new THREE.BoxGeometry( 12, 32, 32 );
 const material = new THREE.MeshNormalMaterial();
 
 const mesh = new THREE.Mesh(geometry, material);
@@ -89,7 +90,7 @@ const animate = function () {
   requestAnimationFrame(animate);
 
   mesh.rotation.x += 0.01;
-  mesh.rotation.y += 0.02;
+  mesh.rotation.y += 0.01;
   mesh.rotation.z += 0.1;
 
   renderer.render(scene, camera);
