Update CV to pdf

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
@@ -390,7 +389,7 @@ const animate = function () {
                     </div>
 
                     <div class="col-lg-2 mr-auto mt-2 text-center">
-                        <a class="btn btn-outline-info btn-xl" href="CV/CV-Radkevich-EN.doc">
+                        <a class="btn btn-outline-info btn-xl" href="CV/Radkevich-CV-2021.pdf">
            <i class="far fa-file-word"></i> My CV</a>
                     </div>
                    
