--- a/index.html
+++ b/index.html
@@ -107,119 +107,46 @@
     animate();
 </script>
 
-<!-- Portfolio Section-->
-<section class="page-section portfolio" id="portfolio">
+<!-- About Section-->
+<section class="page-section text-secondary mb-0" id="about">
     <div class="container">
-        <!-- Portfolio Section Heading-->
-        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2>
-        <!-- Icon Divider-->
+
+        <!-- About Section Heading -->
+        <h2 class="page-section-heading text-center text-uppercase text-secondary">About me</h2>
+
+        <!-- Icon Divider -->
         <div class="divider-custom">
             <div class="divider-custom-line"></div>
             <div class="divider-custom-icon">
-                <i class="fas fa-box-open"></i>
+                <i class="fas fa-id-card"></i>
             </div>
             <div class="divider-custom-line"></div>
         </div>
-        <!-- Portfolio Grid Items-->
-        <div class="row">
-            <!-- Portfolio Item 1-->
-            <!-- Portfolio Item 4 -->
-            <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
-                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-white">
-                            <i class="fas fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="img/portfolio/belbort.png" alt="">
-                </div>
-            </div>
 
-            <!-- Portfolio Item 1 -->
-            <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
-                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-white">
-                            <i class="fas fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
-                </div>
-            </div>
-
-            <!-- Portfolio Item 2 -->
-            <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
-                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-white">
-                            <i class="fas fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="img/portfolio/cake.png" alt="">
-                </div>
-            </div>
-
-            <!-- Portfolio Item 5 -->
-            <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
-                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-white">
-                            <i class="fas fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-android" src="img/portfolio/android.png" alt="">
-                </div>
-            </div>
-
-            <!-- Portfolio Item 3 -->
-            <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
-                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-white">
-                            <i class="fas fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="img/portfolio/circus.png" alt="">
-                </div>
-            </div>
-
-            <!-- Portfolio Item 6 -->
-            <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
-                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-white">
-                            <i class="fas fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="img/portfolio/itra.png" alt="">
-                </div>
-            </div>
-
-            <!-- Portfolio Item 7 -->
-            <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal7">
-                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-white">
-                            <i class="fas fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="img/portfolio/jsp.png" alt="">
-                </div>
-            </div>
-
-            <!-- Portfolio Item 8 -->
-            <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal8">
-                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-white">
-                            <i class="fas fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="img/portfolio/rest.png" alt="">
-                </div>
+        <!-- About Section Content -->
+        <div class="row text">
+            <div class="col-lg-10 ml-auto">
+                <p class="lead">
+                <p> Have experience in java about 5 years</p>
+                <p>   My tech skills: </p>
+                <p> Backend: Java, Spring (Core, Boot, MVC, Data, Security, Cloud)</p>
+                <p> Databases: PostgreSQL, MySQL, MongoDB, Hibernate</p>
+                <p> Cloud: AWS (EC2, Beanstalk, Lightsail, ASG, ELB, VPC, ECS, RDS, S3, SNS, SQS, Aurora, CloudFront, IAM, CloudWatch, CloudFormation, API Gateway, Route53, Certificate Manager, Cognito, Lambda, DynamoDB), Azure</p>
+                <p> Testing: JUnit, Mockito</p>
+                <p> Software Architectures & DevOps: REST, GraphQL, Microservices (message queuing, API gateway, service discovery, load balancing, centralized configurations, tracing and logging, containerization), RabbitMQ, Kafka, Docker, Kubernetes(K8s), Docker Compose, CI/CD (Jenkins)</p>
+                <p> Version control: GitHub, Bitbucket</p>
+                <p> AWS certified </p>
             </div>
         </div>
-        <!-- /.row -->
+
+        <!-- About Section Button -->
+        <div class="text-center mt-4">
+            <a class="btn btn-xl btn-outline-info" href="https://github.com/Vitold-sys">
+                <i class="fab fa-github mr-2"></i>
+                Here you can view my code
+            </a>
+        </div>
+
     </div>
 </section>
 
@@ -340,48 +267,122 @@
     </div>
 </section>
 
-<!-- About Section-->
-<section class="page-section text-secondary mb-0" id="about">
+<!-- Portfolio Section-->
+<section class="page-section portfolio" id="portfolio">
     <div class="container">
-
-        <!-- About Section Heading -->
-        <h2 class="page-section-heading text-center text-uppercase text-secondary">About me</h2>
-
-        <!-- Icon Divider -->
+        <!-- Portfolio Section Heading-->
+        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2>
+        <!-- Icon Divider-->
         <div class="divider-custom">
             <div class="divider-custom-line"></div>
             <div class="divider-custom-icon">
-                <i class="fas fa-id-card"></i>
+                <i class="fas fa-box-open"></i>
             </div>
             <div class="divider-custom-line"></div>
         </div>
-
-        <!-- About Section Content -->
-        <div class="row text">
-            <div class="col-lg-4 ml-auto">
-                <p class="lead">I am a purposeful person. I quickly find a common language with people, pleasant in
-                    communication. Quickly trained and polite in communication. 40 minutes a day I devote to improving
-                    English skills. Action plan for the day, week, month. I like self-study: I independently studied
-                    Spring, Hibernate. Constantly improving my theoretical knowledge in practice.</p>
+        <!-- Portfolio Grid Items-->
+        <div class="row">
+            <!-- Portfolio Item 1-->
+            <!-- Portfolio Item 4 -->
+            <div class="col-md-6 col-lg-4 mb-3">
+                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                        <div class="portfolio-item-caption-content text-center text-white">
+                            <i class="fas fa-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img class="img-fluid" src="img/portfolio/belbort.png" alt="">
+                </div>
             </div>
-            <div class="col-lg-4 mr-auto">
-                <p class="lead">I studied Python myself, then I realized that I wanted to learn Java. I have graduated
-                    from IT Academy Java Fundamentals courses. Finished internship as a Java developer with success.</p>
-                <p class="lead"> I attend events and conferences that helps me grow as a specialist.</p>
-                <p class="lead"> AWS certified.</p>
+
+            <!-- Portfolio Item 1 -->
+            <div class="col-md-6 col-lg-4 mb-3">
+                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
+                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                        <div class="portfolio-item-caption-content text-center text-white">
+                            <i class="fas fa-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
+                </div>
+            </div>
+
+            <!-- Portfolio Item 2 -->
+            <div class="col-md-6 col-lg-4 mb-3">
+                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
+                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                        <div class="portfolio-item-caption-content text-center text-white">
+                            <i class="fas fa-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img class="img-fluid" src="img/portfolio/cake.png" alt="">
+                </div>
+            </div>
+
+            <!-- Portfolio Item 5 -->
+            <div class="col-md-6 col-lg-4 mb-3">
+                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
+                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                        <div class="portfolio-item-caption-content text-center text-white">
+                            <i class="fas fa-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img class="img-android" src="img/portfolio/android.png" alt="">
+                </div>
+            </div>
+
+            <!-- Portfolio Item 3 -->
+            <div class="col-md-6 col-lg-4 mb-3">
+                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
+                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                        <div class="portfolio-item-caption-content text-center text-white">
+                            <i class="fas fa-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img class="img-fluid" src="img/portfolio/circus.png" alt="">
+                </div>
+            </div>
+
+            <!-- Portfolio Item 6 -->
+            <div class="col-md-6 col-lg-4 mb-3">
+                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
+                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                        <div class="portfolio-item-caption-content text-center text-white">
+                            <i class="fas fa-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img class="img-fluid" src="img/portfolio/itra.png" alt="">
+                </div>
+            </div>
+
+            <!-- Portfolio Item 7 -->
+            <div class="col-md-6 col-lg-4 mb-3">
+                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal7">
+                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                        <div class="portfolio-item-caption-content text-center text-white">
+                            <i class="fas fa-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img class="img-fluid" src="img/portfolio/jsp.png" alt="">
+                </div>
+            </div>
+
+            <!-- Portfolio Item 8 -->
+            <div class="col-md-6 col-lg-4 mb-3">
+                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal8">
+                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                        <div class="portfolio-item-caption-content text-center text-white">
+                            <i class="fas fa-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img class="img-fluid" src="img/portfolio/rest.png" alt="">
+                </div>
             </div>
         </div>
-
-        <!-- About Section Button -->
-        <div class="text-center mt-4">
-            <a class="btn btn-xl btn-outline-info" href="https://github.com/Vitold-sys">
-                <i class="fab fa-github mr-2"></i>
-                Here you can view my code
-            </a>
-        </div>
-
+        <!-- /.row -->
     </div>
 </section>
+
 <!-- Contact Section -->
 <section class="page-section bg-primary" id="contact">
     <div class="container">
