Upd about info style

--- a/index.html
+++ b/index.html
@@ -165,21 +165,21 @@
 
         <!-- About Section Content -->
         <div class="row text">
-            <div class="col-lg-10 ml-auto">
+            <div class="col-lg-16 ml-auto">
                 <p class="lead">
-                <p class="font-italic">Have experience in Java for about 5 years</p>
-                <p class="font-weight-bold mb-0 h4">My tech skills:</p>
+                <p class="font-italic about-info">Have experience in Java for about 5 years</p>
+                <p class="font-weight-bold mb-2 h2 ">My tech skills:</p>
                 <p/>
-                <p class="fade-in" id="item1"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i> Backend:</strong> Java, Spring (Core, Boot, MVC, Data, Security, Cloud)</p>
-                <p class="fade-in" id="item2"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i> Databases:</strong> PostgreSQL, MySQL, MongoDB, Hibernate</p>
-                <p class="fade-in" id="item3"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i> Cloud:</strong> AWS (EC2, Beanstalk, Lightsail, ASG, ELB, VPC, ECS, RDS, S3, SNS, SQS, Aurora, CloudFront, IAM, CloudWatch, CloudFormation, API Gateway, Route53, Certificate Manager, Cognito, Lambda, DynamoDB), Azure</p>
-                <p class="fade-in" id="item4"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i> Testing:</strong> JUnit, Mockito</p>
-                <p class="fade-in" id="item5"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i> Software Architectures & DevOps:</strong> REST, Microservices (message queuing, API gateway, service discovery, load balancing, centralized configurations, tracing and logging, containerization), RabbitMQ, Kafka, Docker, Kubernetes(K8s), Docker Compose, CI/CD (Jenkins)</p>
-                <p class="fade-in" id="item6"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i> Version control:</strong> GitHub, Bitbucket</p>
-                <p class="fade-in" id="item7"><strong> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-award text-warning" viewBox="0 0 16 16">
+                <p class="fade-in about-info" id="item1"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i> Backend:</strong> Java, Spring (Core, Boot, MVC, Data, Security, Cloud)</p>
+                <p class="fade-in about-info" id="item2"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i> Databases:</strong> PostgreSQL, MySQL, MongoDB, Hibernate</p>
+                <p class="fade-in about-info" id="item3"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i> Cloud:</strong> AWS (EC2, Beanstalk, Lightsail, ASG, ELB, VPC, RDS, S3, SNS, SQS, Aurora, CloudFront, IAM, CloudWatch, CloudFormation, API Gateway, Route53, Certificate Manager, Cognito, Lambda, DynamoDB), Azure</p>
+                <p class="fade-in about-info" id="item4"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i> Testing:</strong> JUnit, Mockito</p>
+                <p class="fade-in about-info" id="item5"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i> Software Architectures & DevOps:</strong> REST, deploying infrastructure in AWS, Microservices (message queuing, API gateway, service discovery, load balancing, centralized configurations, tracing and logging, containerization), RabbitMQ, Kafka, Docker, Kubernetes(K8s), Docker Compose, CI/CD (Jenkins)</p>
+                <p class="fade-in about-info" id="item6"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i> Version control:</strong> GitHub, Bitbucket</p>
+                <p class="fade-in about-info" id="item7"><strong> <svg xmlns="http://www.w3.org/2000/svg" width="34" height="52" fill="currentColor" class="bi bi-award text-warning" viewBox="0 0 26 26">
                     <path d="M9.669.864 8 0 6.331.864l-1.858.282-.842 1.68-1.337 1.32L2.6 6l-.306 1.854 1.337 1.32.842 1.68 1.858.282L8 12l1.669-.864 1.858-.282.842-1.68 1.337-1.32L13.4 6l.306-1.854-1.337-1.32-.842-1.68zm1.196 1.193.684 1.365 1.086 1.072L12.387 6l.248 1.506-1.086 1.072-.684 1.365-1.51.229L8 10.874l-1.355-.702-1.51-.229-.684-1.365-1.086-1.072L3.614 6l-.25-1.506 1.087-1.072.684-1.365 1.51-.229L8 1.126l1.356.702z"/>
                     <path d="M4 11.794V16l4-1 4 1v-4.206l-2.018.306L8 13.126 6.018 12.1z"/>
-                </svg> AWS certified</strong></p>
+                </svg>AWS certified</strong></p>
                 </p>
             </div>
         </div>
