--- a/index.html
+++ b/index.html
@@ -27,6 +27,47 @@
             opacity: 1;
             transform: translateY(0);
         }
+
+        #progress-bar-container {
+            width: 100%;
+            height: 0.5rem;
+            border-radius: 0.25rem;
+            position: relative;
+            overflow: hidden;
+        }
+
+        #progress-bar {
+            height: 100%;
+            border-radius: 0.1rem;
+            position: absolute;
+            top: 0;
+            left: 0;
+            animation: load 2s linear;
+            background: linear-gradient(90deg, #46c4e0, #17a2b8, #8aacac, #5fe0e0, #17a2b8, #17a2b8);
+            background-size: 600% 100%;
+        }
+
+        @keyframes load {
+            0% {
+                width: 0;
+            }
+            100% {
+                width: 100%;
+            }
+        }
+
+        #resultexpertime {
+            transition: opacity 0.5s ease-in-out;
+        }
+
+        @keyframes glow {
+            0% {
+                box-shadow: 0 0 10px #17a2b8;
+            }
+            100% {
+                box-shadow: 0 0 20px #17a2b8;
+            }
+        }
     </style>
 </head>
 <body id="page-top">
@@ -120,7 +161,7 @@
 </script>
 
 <script>
-    document.addEventListener("DOMContentLoaded", function() {
+    document.addEventListener("DOMContentLoaded", function () {
         var items = document.querySelectorAll('.fade-in');
         var currentItem = 0;
 
@@ -147,6 +188,34 @@
     });
 </script>
 
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const startDate = new Date("June 1, 2019");
+        const currentDate = new Date();
+
+        const totalMonths = (currentDate.getFullYear() - startDate.getFullYear()) * 12 +
+            currentDate.getMonth() - startDate.getMonth();
+
+        let progress = 0;
+        const loadingInterval = setInterval(function () {
+            progress++;
+            document.getElementById("progress-bar").style.width = progress + "%";
+
+            if (progress >= 100) {
+                clearInterval(loadingInterval);
+
+                document.getElementById("progress-bar-container").style.opacity = 0;
+                document.getElementById("resultexpertime").classList.remove("d-none");
+
+                const years = Math.floor(totalMonths / 12);
+                const remainingMonths = totalMonths % 12;
+
+                document.getElementById("experience-text").innerText = `Have experience in Java for about ${years} years and ${remainingMonths} months.`;
+            }
+        }, 20);
+    });
+</script>
+
 <!-- About Section-->
 <section class="page-section text-secondary mb-0" id="about">
     <div class="container">
@@ -167,19 +236,39 @@
         <div class="row text">
             <div class="col-lg-16 ml-auto">
                 <p class="lead">
-                <p class="font-italic about-info">Have experience in Java for about 5 years</p>
+                <div id="progress-bar-container">
+                    <div id="progress-bar"></div>
+                </div>
+                <div id="resultexpertime" class="d-none">
+                    <p id="experience-text" class="font-italic about-info"></p>
+                </div>
+                </p>
                 <p class="font-weight-bold mb-2 h2 ">My tech skills:</p>
                 <p/>
-                <p class="fade-in about-info" id="item1"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i> Backend:</strong> Java, Spring (Core, Boot, MVC, Data, Security, Cloud)</p>
-                <p class="fade-in about-info" id="item2"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i> Databases:</strong> PostgreSQL, MySQL, MongoDB, Hibernate</p>
-                <p class="fade-in about-info" id="item3"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i> Cloud:</strong> AWS (EC2, Beanstalk, Lightsail, ASG, ELB, VPC, RDS, S3, SNS, SQS, Aurora, CloudFront, IAM, CloudWatch, CloudFormation, API Gateway, Route53, Certificate Manager, Cognito, Lambda, DynamoDB), Azure</p>
-                <p class="fade-in about-info" id="item4"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i> Testing:</strong> JUnit, Mockito</p>
-                <p class="fade-in about-info" id="item5"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i> Software Architectures & DevOps:</strong> REST, deploying infrastructure in AWS, Microservices (message queuing, API gateway, service discovery, load balancing, centralized configurations, tracing and logging, containerization), RabbitMQ, Kafka, Docker, Kubernetes(K8s), Docker Compose, CI/CD (Jenkins)</p>
-                <p class="fade-in about-info" id="item6"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i> Version control:</strong> GitHub, Bitbucket</p>
-                <p class="fade-in about-info" id="item7"><strong> <svg xmlns="http://www.w3.org/2000/svg" width="34" height="52" fill="currentColor" class="bi bi-award text-warning" viewBox="0 0 26 26">
-                    <path d="M9.669.864 8 0 6.331.864l-1.858.282-.842 1.68-1.337 1.32L2.6 6l-.306 1.854 1.337 1.32.842 1.68 1.858.282L8 12l1.669-.864 1.858-.282.842-1.68 1.337-1.32L13.4 6l.306-1.854-1.337-1.32-.842-1.68zm1.196 1.193.684 1.365 1.086 1.072L12.387 6l.248 1.506-1.086 1.072-.684 1.365-1.51.229L8 10.874l-1.355-.702-1.51-.229-.684-1.365-1.086-1.072L3.614 6l-.25-1.506 1.087-1.072.684-1.365 1.51-.229L8 1.126l1.356.702z"/>
-                    <path d="M4 11.794V16l4-1 4 1v-4.206l-2.018.306L8 13.126 6.018 12.1z"/>
-                </svg>AWS certified</strong></p>
+                <p class="fade-in about-info" id="item1"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i>
+                    Backend:</strong> Java, Spring (Core, Boot, MVC, Data, Security, Cloud)</p>
+                <p class="fade-in about-info" id="item2"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i>
+                    Databases:</strong> PostgreSQL, MySQL, MongoDB, Hibernate</p>
+                <p class="fade-in about-info" id="item3"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i>
+                    Cloud:</strong> AWS (EC2, Beanstalk, Lightsail, ASG, ELB, VPC, RDS, S3, SNS, SQS, Aurora,
+                    CloudFront, IAM, CloudWatch, CloudFormation, API Gateway, Route53, Certificate Manager, Cognito,
+                    Lambda, DynamoDB), Azure</p>
+                <p class="fade-in about-info" id="item4"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i>
+                    Testing:</strong> JUnit, Mockito</p>
+                <p class="fade-in about-info" id="item5"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i>
+                    Software Architectures & DevOps:</strong> REST, deploying infrastructure in AWS, Microservices
+                    (message queuing, API gateway, service discovery, load balancing, centralized configurations,
+                    tracing and logging, containerization), RabbitMQ, Kafka, Docker, Kubernetes(K8s), Docker Compose,
+                    CI/CD (Jenkins)</p>
+                <p class="fade-in about-info" id="item6"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i>
+                    Version control:</strong> GitHub, Bitbucket</p>
+                <p class="fade-in about-info" id="item7"><strong>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="34" height="52" fill="currentColor"
+                         class="bi bi-award text-warning" viewBox="0 0 26 26">
+                        <path d="M9.669.864 8 0 6.331.864l-1.858.282-.842 1.68-1.337 1.32L2.6 6l-.306 1.854 1.337 1.32.842 1.68 1.858.282L8 12l1.669-.864 1.858-.282.842-1.68 1.337-1.32L13.4 6l.306-1.854-1.337-1.32-.842-1.68zm1.196 1.193.684 1.365 1.086 1.072L12.387 6l.248 1.506-1.086 1.072-.684 1.365-1.51.229L8 10.874l-1.355-.702-1.51-.229-.684-1.365-1.086-1.072L3.614 6l-.25-1.506 1.087-1.072.684-1.365 1.51-.229L8 1.126l1.356.702z"/>
+                        <path d="M4 11.794V16l4-1 4 1v-4.206l-2.018.306L8 13.126 6.018 12.1z"/>
+                    </svg>
+                    AWS certified</strong></p>
                 </p>
             </div>
         </div>
